--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "keywords": [],
   "author": "Niels de Jong",
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.2",
     "@babel/runtime": "^7.14.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -65,6 +66,7 @@
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
