--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ REACT_APP_PORT=7687
 REACT_APP_DATABASE=
 REACT_APP_USERNAME=neo4j
 REACT_APP_PASSWORD=1010
-PROTOCOL=bolt
+REACT_APP_DOMAIN=dev-5ftozwok.us.auth0.com
+REACT_APP_CLIENT_ID=85DNNVlBLOrHQHTztjJwUJZnRSyMQEiZ
