--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-REACT_APP_PROTOCOL=bolt
-REACT_APP_URL=localhost
-REACT_APP_PORT=7687
+REACT_APP_PROTOCOL=neo4j+s
+REACT_APP_URL=685b5673.databases.neo4j.io
+REACT_APP_PORT=
 REACT_APP_DATABASE=
 REACT_APP_USERNAME=neo4j
-REACT_APP_PASSWORD=1010
+REACT_APP_PASSWORD=5h5W-yMgrB7Y6TJE6e61_Qdge9EkncKVdCFA4c7H8Qo
 REACT_APP_DOMAIN=dev-5ftozwok.us.auth0.com
 REACT_APP_CLIENT_ID=85DNNVlBLOrHQHTztjJwUJZnRSyMQEiZ
